@@ -351,6 +351,7 @@
 26) kernel: ppp: build ppp* as static (sligth optimize performance, small increase ram usage).<br>
 27) kernel: enchane sections speed hack(fastpathsys ~2% cpu free).<br>
 28) kernel: ipv4: Make IP_MULTICAST_ALL and IP_MSFILTER work on raw sockets.<br>
+39) kernel: apply optimize_mips_memcpy_memset_cache.<br>
 <br>
 <br>
 <b>TODO:</b><br>
